# AWS-Dashboard

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.aws.yml  docker-compose.yml  package.json  plan.md  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_connection_scope.py  0003_payable_billing_truth.py  0004_workspace_tenancy.py
apps/api/app/: auth.py  config.py  main.py
apps/api/app/api/: routes.py
apps/api/app/db/: base.py  init_db.py  models.py  readiness.py  seed.py  session.py
apps/api/app/schemas/: api.py  tenancy.py
apps/api/app/services/: analytics.py  audit.py  aws_access.py  billing.py  collectors.py  connection_scope.py  demo_sync.py
apps/api/tests/: test_auth.py  test_aws_access.py  test_billing.py  test_connection_scope.py  test_health.py  test_init_db.py  test_ranges.py  test_seed.py  test_workspace_routes.py
apps/web/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/accounts/: page.tsx
apps/web/app/anomalies/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/components/: app-frame.tsx  auth-controls.tsx  auth-gate.tsx  charts.tsx  connection-provider.tsx  ui.tsx
apps/web/lib/: api.ts  auth.ts  format.ts  types.ts
docs/: architecture.md  authentication.md  kubernetes-local.md  local-setup.md
infra/: README.md
infra/helm/aws-collaboration-dashboard/: Chart.yaml  values-local.yaml  values.yaml
infra/opentofu/: README.md
(+22 files in other folders)
